--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,5 +1,18 @@
 version: 0.2 
 
+phases:
+  install:
+    commands:
+      - echo Entered the install phase...
+      - apt-get update -y
+      - apt-get install -y maven
+    finally:
+      - echo This always runs even if the update or install command fails 
+  build:
+    commands:
+      - echo Entered the build phase...
+      - echo Build started on `date`
+      - mvn package
 artifacts:
   files:
     - '**/*'
